# libvessel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  testing.md  usage.md
example/: CMakeLists.txt  main.cpp  vessel.json
examples/cmake/: .gitignore
examples/gradle/: .gitignore  settings.gradle  vessel.json
examples/gradle/app/: build.gradle
examples/gradle/app/src/main/java/vessel/example/: App.java
src/: libvessel.cpp  vessel.cpp  vessel.h  vsl_stub.cpp
src/packers/: CMakePacker.cpp  CMakePacker.h  GradlePacker.cpp  GradlePacker.h  Packer.h
tests/: run.sh  test.sh
tests/cmake/: run_tests.sh
tests/cmake/actions/: 02-prepare-example.sh  03-pack.sh  04-verify-bundle.sh  05-run-vessel.sh  06-verify-registry.sh  08-vsl-remove-test.sh  common.sh
tests/docker/: arch.Dockerfile  fedora.Dockerfile  run_in_container.sh  ubuntu.Dockerfile
tests/gradle/: run_tests.sh
tests/gradle/actions/: 02-prepare-example.sh  03-pack.sh  05-verify-extract.sh  common.sh
tests/scripts/: run_tests.sh
tests/scripts/actions/: 01-build-sdk.sh  02-prepare-example.sh  05-run-vessel.sh  07-vsl-update-test.sh  common.sh
